--- a/package.json
+++ b/package.json
@@ -2,7 +2,10 @@
   "name": "social",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://risshi-dev.github.io/theSocialComment",
   "dependencies": {
+    "@material-ui/core": "^4.11.0",
+    "@material-ui/icons": "^4.9.1",
     "@testing-library/jest-dom": "^5.11.5",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
@@ -15,7 +18,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -23,6 +28,7 @@
       "react-app/jest"
     ]
   },
+  "devDependencies": {"gh-pages": "3.1.0"},
   "browserslist": {
     "production": [
       ">0.2%",
